--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,11 @@
   margin: 0;
   margin-bottom: 10px;
 }
+
+.card-image{
+  transition: transform 0.3s ease-in-out;
+}
+
+.card-image:hover{
+  transform: scale(1.02);
+}
