--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,54 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.card {
+/* colors */
+:root {
+  --primary-color: #BB86FC;
+  --background-color: #121212;
+  --background-color-light: #1F1F1F;
+  --primary-hover: #3A2D49;
+}
 
+.container {
+  width: min(100% - 30px, 1280px);
+  margin-inline: auto;
+}
+
+/* header */
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+  padding: 0 25px;
+}
+
+.header-content h3 {
+  color: var(--primary-color);
+  font-size: 1.5rem;
+}
+
+/* cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background-color: var(--background-color-light);
+  border-radius: 10px;
+  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in;
+  padding: 2px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transform: scale(1.01);
+  background-color: var(--primary-hover);
+}
+
+.card-container {
+  padding: 2px 16px;
+  border-top: 1px solid var(--primary-color);
 }
 
 .card-grid {
@@ -24,9 +66,8 @@
 }
 
 .card-image{
-  transition: transform 0.3s ease-in-out;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
 
-.card-image:hover{
-  transform: scale(1.02);
-}
