--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,8 @@
   --primary-hover: #3a2d49;
 }
 
-
-
-.details-wrapper, .index-wrapper {
+.details-wrapper,
+.index-wrapper {
   min-height: calc(100vh - 145px);
 }
 
@@ -166,7 +165,6 @@
 
 .footer-bar {
   background-color: #0a0a0a;
-  
 }
 
 .footer-wrapper {
@@ -205,17 +203,54 @@
   transition: background-color 0.2s ease-in;
 }
 
-.next-button:hover {
+.next-button:hover, .search-button:hover {
   background-color: #925fd1;
 }
 
-.previous-button, .sort-button {
+.previous-button,
+.sort-button {
   background-color: var(--background-color);
   border: var(--primary-color) 1px solid;
   color: #fff;
   margin-left: 8px;
 }
 
-.previous-button:hover, .sort-button:hover {
+.previous-button:hover,
+.sort-button:hover {
   background-color: var(--primary-hover);
+}
+
+.not-found {
+  height: calc(100vh - 145px);
+}
+
+/* search */
+.search-input {
+  height: 34px;
+  width: 300px;
+}
+
+.search-bar {
+  align-items: center;
+  display: flex;
+}
+
+.button-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-button {
+  background-color: var(--primary-color);
+  border: none;
+  padding: 10px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1rem;
+  margin: 4px 2px;
+  margin-left: 8px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.2s ease-in;
 }
